# wellspring

./: API.md  API_ja_JP.md  API_zh_CN.md  README.md  README_ja_JP.md  README_tr_TR.md  README_zh_CN.md
.github/: CONTRIBUTING.md  CONTRIBUTING_zh_CN.md
app/: package.json  pnpm-lock.yaml  webpack.tauri.js
app/appearance/langs/: ar_SA.json  de_DE.json  en_US.json  es_ES.json  fr_FR.json  he_IL.json  it_IT.json  ja_JP.json  ko_KR.json  pl_PL.json  pt_BR.json  ru_RU.json  sk_SK.json  tr_TR.json  zh_CHT.json  zh_CN.json
app/electron/: error.html  init.html  main.js
app/src/: constants.ts  index.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: kernel.rs  main.rs  protocol.rs  window_state.rs
app/src-tauri/src/commands/: dialog.rs  export.rs  mod.rs  system.rs  tray.rs  window.rs
app/src/boot/: onGetConfig.ts
app/src/card/: newCardTab.ts  openCard.ts
app/src/config/: about.ts  account.ts  editor.ts  exportConfig.ts  (+3 more)
app/stage/: auth.html  manifest.webmanifest
docs/plans/: 2026-03-20-tauri-migration-design.md  2026-03-20-tauri-migration-plan.md
kernel/: go.mod
kernel/go-sqlite3-local/: callback_test.go  go.mod  sqlite3.go  sqlite3_go113_test.go  sqlite3_go18.go  sqlite3_go18_test.go  sqlite3_opt_app_armor.go  sqlite3_opt_fts5.go  sqlite3_opt_icu.go  sqlite3_opt_json1.go  sqlite3_opt_preupdate_hook.go  sqlite3_opt_preupdate_omit.go  sqlite3_opt_unlock_notify.go  sqlite3_opt_vtable.go  sqlite3_trace.go
kernel/model/: index.go
kernel/server/: serve.go
(+40 files in other folders)
